syntax = "proto3";

package common;

option go_package = "grpc-course-protobuf/pb/common";

// response wrapper dari common/BaseResponse
message BaseResponse {
  int64 status_code = 1;
  bool is_success = 2;
  string message = 3;
  repeated ValidationError validation_errors = 4;
}

// detail error validation untuk wrapper response
message ValidationError {
  string field = 1; // nama field yang error
  string message = 2; // pesan error
}